header, footer, hero-block, gym

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,12 @@
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
+@import "blocks/button";
+@import "blocks/page-header";
+@import "blocks/hero-block";
+@import "blocks/gym";
+@import "blocks/page-footer";
+
 
 // ---------------------------------
 
