--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -32,6 +32,11 @@ body {
   height: 100%;
 
   background-color: $color-default-white;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: $color-sapphire;
 }
 
 a {
