--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,10 +11,15 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
 $color-neon-blue:                   #2c39f2;
+$color-sapphire:                    #102654;
 $color-torch-red:                   #ff1553;
+$color-dark-cerulean:               #003d85;
+$color-venetian-red:                #b80027;
+$color-black-russian:               #030a1a;
 
 // Gradient
 
+$red-to-blue:               linear-gradient(-130deg, $color-venetian-red 0% 25%, $color-dark-cerulean 75% 90%);
 $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
 
 // Typography
@@ -47,6 +52,7 @@ $vp-320:                            320px;
 $vp-375:                            375px;
 $vp-768:                            768px;
 $vp-1024:                           1024px;
+$vp-1200:                           1200px;
 $vp-1280:                           1280px;
 $vp-1440:                           1440px;
 $vp-1920:                           1920px;
