--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,8 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/data-tabs";
+@import "vendor/swiper";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
@@ -27,6 +29,10 @@
 @import "blocks/page-header";
 @import "blocks/hero-block";
 @import "blocks/gym";
+@import "blocks/subscriptions";
+@import "blocks/tabs";
+@import "blocks/subscriptions-сard";
+@import "blocks/super-games";
 @import "blocks/page-footer";
 
 
