--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -162,13 +162,30 @@
   @include vp-767 {
     position: relative;
     width: 100%;
+    height: max-content;
     bottom: auto;
   }
 
   img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin: 0;
+  }
+
+  iframe {
+    width: 364px;
+    height: 228px;
+
+    @include vp-1199 {
+      width: 266px;
+      height: 167px;
+    }
+
+    @include vp-767 {
+      width: 100%;
+      height: auto;
+    }
   }
 }
 
