--- a/source/sass/blocks/hero-block.scss
+++ b/source/sass/blocks/hero-block.scss
@@ -24,13 +24,14 @@
     line-height: 110px;
     font-weight: 600;
     text-align: right;
+    letter-spacing: 4.6px;
     text-transform: uppercase;
-    letter-spacing: 0.72px;
 
     @include vp-1199 {
       font-size: 72px;
       line-height: 86px;
       letter-spacing: 3.6px;
+      text-transform: none;
     }
 
     @include vp-767 {
@@ -133,6 +134,11 @@
 .hero-block__button {
   margin-top: auto;
   margin-left: auto;
+  padding: 20px 56px;
+
+  @include vp-1199 {
+    padding: 20px 33px;
+  }
 
   @include vp-767 {
     margin: 0;
