--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,9 +13,16 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 $color-neon-blue:                   #2c39f2;
 $color-sapphire:                    #102654;
 $color-torch-red:                   #ff1553;
+$color-torch-red-2:                 #ed0233;
 $color-dark-cerulean:               #003d85;
 $color-venetian-red:                #b80027;
+$color-crimson:                     #d10a42;
 $color-black-russian:               #030a1a;
+$color-ghost-white:                 #f8f9fc;
+$color-grey:                        #787878;
+$color-egyptian-blue:               #103aae;
+$color-whisper:                     #e8e8e8;
+
 
 // Gradient
 
