trainers and supergym

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,7 +22,8 @@ $color-ghost-white:                 #f8f9fc;
 $color-grey:                        #787878;
 $color-egyptian-blue:               #103aae;
 $color-whisper:                     #e8e8e8;
-
+$color-spindle:                     #b6bdcc;
+$color-dark-gray:                   #afafaf;
 
 // Gradient
 
