--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/tabs";
 @import "blocks/subscriptions-сard";
 @import "blocks/super-games";
+@import "blocks/trainers";
 @import "blocks/page-footer";
 
 
