adds all other blocks

--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -99,7 +99,8 @@
       }
     }
 
-    @include hover-focus {
+    &:hover,
+    &:focus {
       border-color: $color-sapphire;
       background-color: $color-sapphire;
 
