--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -22,6 +22,10 @@
   color: $color-default-white;
   padding-top: 10px;
 
+  &:hover {
+    opacity: 0.7;
+  }
+
   @include vp-1199 {
     width: 82px;
     height: 17px;
