--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -26,6 +26,10 @@
   padding: 10px 0;
   color: $color-default-white;
 
+  &:hover {
+    opacity: 0.7;
+  }
+
   @include vp-1199 {
     padding: 5px 0;
     width: 82px;
@@ -45,6 +49,10 @@
   line-height: 31px;
   font-weight: 600;
   letter-spacing: 0.78px;
+
+  &:hover {
+    opacity: 0.7;
+  }
 
   @include vp-1199 {
     font-size: 24px;
