--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -75,7 +75,7 @@
 
     @include vp-1199 {
       flex-direction: column;
-      align-items: stretch;
+      align-items: center;
       gap: 40px;
     }
 
