--- a/source/sass/blocks/free-lesson.scss
+++ b/source/sass/blocks/free-lesson.scss
@@ -16,8 +16,10 @@
     margin: 0;
     margin-bottom: 14px;
     word-break: break-word;
+    width: 389px;
 
     @include vp-1199 {
+      width: 100%;
       font-size: 42px;
       font-weight: 700;
       line-height: 50px;
