--- a/source/sass/blocks/hero-block.scss
+++ b/source/sass/blocks/hero-block.scss
@@ -5,16 +5,18 @@
 }
 
 .hero-block__container {
-  display: flex;
-  justify-content: space-between;
-  padding: 51px 303px 51px 195px;
+  padding: 51px 303px 49px 115px;
+
+  @include vp-1359 {
+    padding: 51px 303px 51px 50px;
+  }
 
   @include vp-1199 {
-    padding: 82px 45px;
+    padding: 82px 45px 60px 38px;
   }
 
   @include vp-767 {
-    padding: 115px 14px 80px;
+    padding: 110px 14px 78px;
   }
 
   h2 {
@@ -29,22 +31,25 @@
     text-transform: uppercase;
     width: 248px;
     word-break: break-word;
-    margin-left: auto;
+    margin-bottom: 48px;
 
     @include vp-1199 {
       font-size: 72px;
       line-height: 86px;
       letter-spacing: 3.6px;
       text-transform: none;
-      width: 235px;
+      width: 190px;
+      margin-bottom: 35px;
     }
 
     @include vp-767 {
       font-size: 72px;
       line-height: 86px;
       letter-spacing: 3.6px;
-      width: 213px;
+      width: 190px;
       margin-bottom: 23px;
+      grid-column: 3 / 4;
+      height: min-content;
     }
   }
 
@@ -58,17 +63,16 @@
     letter-spacing: 1.44px;
 
     order: -1;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
     width: 248px;
     word-break: break-word;
-    margin-left: auto;
     padding-right: 45px;
 
     @include vp-1199 {
       font-size: 34px;
       line-height: 41px;
       letter-spacing: 1.02px;
-      padding-right: 5px;
+      padding-right: 10px;
       margin-bottom: 5px;
       width: 200px;
     }
@@ -78,11 +82,15 @@
       line-height: 34px;
       letter-spacing: 0.84px;
       width: 190px;
+      padding-right: 5px;
+      margin-bottom: 12px;
+      grid-column: 3 / 4;
     }
   }
 
   picture {
     flex: none;
+    margin-left: auto;
   }
 
   img {
@@ -97,48 +105,67 @@
   }
 }
 
-.hero-block__text-area {
+.hero-block__wrapper {
   display: flex;
-  width: 37%;
-  flex-direction: column;
-  padding: 115px 20px 42px;
-  position: relative;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 949px;
+  gap: 10px;
 
   @include vp-1199 {
-    padding: 52px 20px 22px;
-    width: 51%;
+    max-width: 690px;
   }
 
   @include vp-767 {
-    padding: 0;
+    display: block;
     width: 100%;
+  }
+}
+
+.hero-block__text-area {
+  display: grid;
+  padding: 113px 0 45px;
+  grid-template-columns: 120px auto;
+  grid-template-rows: repeat(3, min-content);
+  column-gap: 16px;
+
+  @include vp-1199 {
+    padding: 52px 0 45px;
+    column-gap: 20px;
+  }
+
+  @include vp-767 {
+    grid-template-columns: 1fr auto auto;
+    column-gap: 0;
+    padding: 0;
   }
 }
 
 .hero-block__services-list {
   list-style-type: none;
-  margin: 0;
-  margin-top: auto;
   padding: 0;
-  position: absolute;
-  top: 305px;
-  left: -73px;
-  width: 113px;
   word-break: break-word;
+  grid-row: 1 / -1;
+  grid-column: 1 / 2;
+  margin: 0;
+  margin-top: 192px;
 
   @include vp-1199 {
-    top: 187px;
-    left: 0;
+    margin-top: 134px;
   }
 
   @include vp-767 {
-    top: 120px;
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+    margin-right: -13px;
+    margin-top: 123px;
   }
 
   li {
     font-size: 14px;
     line-height: 21px;
     text-align: right;
+    word-break: break-word;
 
     @include vp-1199 {
       font-size: 14px;
@@ -147,17 +174,21 @@
   }
 }
 
-
 .hero-block__button {
-  margin-top: auto;
+  width: 94%;
   margin-left: auto;
-  padding: 20px 56px;
+  padding: 20px 54px;
+  height: min-content;
 
   @include vp-1199 {
-    padding: 20px 33px;
+    padding: 20px 25px;
+    width: 94%;
+    margin: 0 auto;
   }
 
   @include vp-767 {
     margin: 0;
+    width: 100%;
+    grid-column: 1 / -1;
   }
 }
