--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -9,6 +9,11 @@
   padding-top: 41px;
   padding-bottom: 42px;
 
+  @include vp-1199 {
+    padding-top: 45px;
+    padding-bottom: 45px;
+  }
+
   @include vp-767 {
     display: block;
     column-count: 2;
@@ -21,6 +26,8 @@
   display: block;
   color: $color-default-white;
   padding-top: 10px;
+  margin-right: 20px;
+  flex: none;
 
   &:hover {
     opacity: 0.7;
@@ -46,15 +53,19 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 20px;
+  margin-right: 20px;
 
   @include vp-1199 {
     gap: 10px;
+    margin-left: 18px;
   }
 
   @include vp-767 {
     display: block;
-    margin-bottom: 49px;
+    margin: 0;
+    margin-bottom: 45px;
     padding: 0;
   }
 
@@ -73,21 +84,35 @@
 
 .page-footer__navigation-item {
   a {
-    padding: 5px 10px;
+    margin: 0 10px;
+    padding: 5px 0;
 
     @include vp-767 {
+      margin: 0;
       padding: 5px;
     }
   }
 
   a:hover {
     border-bottom: 1px solid $color-default-white;
+
+    @include vp-767 {
+      padding-bottom: 4px;
+      outline-offset: 1px;
+    }
   }
 
   a:focus {
     border: 1px solid $color-default-white;
     outline: none;
     box-shadow: none;
+    margin: 0;
+    padding: 4px 9px;
+
+    @include vp-767 {
+      padding: 4px;
+      outline-offset: 1px;
+    }
   }
 
   a:active {
@@ -111,6 +136,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 11px;
+  width: 97px;
 
   @include vp-767 {
     column-span: all;
