--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -21,7 +21,7 @@
     line-height: 65px;
     letter-spacing: 1.62px;
     margin: 0;
-    margin-bottom: 37px;
+    margin-bottom: 34px;
     word-break: break-word;
 
     @include vp-1199 {
@@ -40,6 +40,10 @@
   }
 }
 
+.reviews__wrapper {
+  position: relative;
+}
+
 .reviews__slider {
   @include vp-1199 {
     padding: 0 56px;
@@ -55,9 +59,10 @@
   color: $color-default-white;
   width: 560px;
   margin: 0 auto;
-  padding: 62px 62px 54px;
+  padding: 64px 62px 57px;
   display: flex;
   gap: 28px;
+  height: 100%;
 
   @include vp-1199 {
     padding: 62px 62px 56px;
@@ -101,14 +106,16 @@
     font-weight: 700;
     line-height: 30px;
     margin: 0;
-    margin-bottom: 4px;
+    margin-bottom: 12px;
+    margin-top: -10px;
     word-break: break-word;
 
     @include vp-767 {
       line-height: 26px;
       padding-left: 99px;
       min-height: 52px;
-      margin-bottom: 29px;
+      margin-top: 10px;
+      margin-bottom: 23px;
     }
   }
 
@@ -135,13 +142,16 @@
 .reviews__button--prev {
   left: 224px;
 
+  @include vp-1359 {
+    left: 130px;
+  }
+
   @include vp-1199 {
-    left: -8px;
+    left: -20px;
   }
 
   @include vp-767 {
-    left: 14px;
-    transform: translate(0, 8px);
+    left: -13px;
   }
 }
 
@@ -149,12 +159,15 @@
   right: 224px;
   transform: rotate(180deg);
 
+  @include vp-1359 {
+    right: 130px;
+  }
+
   @include vp-1199 {
-    right: -8px;
+    right: -20px;
   }
 
   @include vp-767 {
-    right: 14px;
-    transform: translate(0, 8px) rotate(180deg);
+    right: -13px;
   }
 }
