--- a/source/sass/blocks/super-games.scss
+++ b/source/sass/blocks/super-games.scss
@@ -2,7 +2,10 @@
   padding-top: 120px;
   padding-bottom: 100px;
   width: 100%;
+  height: 100%;
   display: flex;
+  align-items: stretch;
+  position: relative;
 
   @include vp-1199 {
     padding-top: 100px;
@@ -20,22 +23,41 @@
 }
 
 .super-games__picture {
-  height: 500px;
+  width: 100%;
+  align-self: stretch;
+  margin: 0;
+  min-height: 500px;
   flex-grow: 2;
   overflow: hidden;
+  background-color: $color-sapphire;
+  position: relative;
+  object-fit: cover;
 
   @include vp-1199 {
-    height: 292px;
+    width: 100%;
+    min-height: 292px;
   }
 
   @include vp-767 {
     height: auto;
+    width: 100%;
   }
 
   picture {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    @include vp-767 {
+      position: static;
+    }
   }
 
   img {
@@ -53,17 +75,17 @@
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(3, auto);
   flex-grow: 2;
-  width: 500px;
+  min-width: 500px;
 
   @include vp-1199 {
-    padding: 43px 42px 46px;
-    width: 292px;
+    padding: 40px 42px 50px;
+    min-width: 292px;
   }
 
   @include vp-767 {
     max-width: 100%;
     width: 100%;
-    padding: 44px 44px 46px;
+    padding: 44px 44px 50px;
   }
 
   h2 {
@@ -83,6 +105,14 @@
       font-size: 48px;
       line-height: 46px;
       letter-spacing: 1.44px;
+      padding: 0;
+      padding-left: 10px;
+      padding-bottom: 7px;
+    }
+
+    @include vp-767 {
+      padding-left: 8px;
+      padding-bottom: 14px;
     }
   }
 
@@ -92,6 +122,7 @@
     grid-column: 1 / -1;
     margin: 0;
     margin-bottom: 45px;
+    margin-top: -10px;
     word-break: break-word;
 
     @include vp-1199 {
@@ -108,16 +139,22 @@
 
 .super-games__date-block {
   grid-column: 2 / 3;
+  margin: 0;
   margin-left: auto;
   padding-top: 7px;
+  margin-right: -7px;
 
   @include vp-1199 {
     height: min-content;
-    padding-top: 3px;
+    padding-top: 8px;
+    margin-right: 0;
+    margin-bottom: 13px;
   }
 }
 
 .super-games__date-title {
+  display: block;
+  height: max-content;
   margin: 0;
   margin-bottom: 13px;
   font-size: 18px;
@@ -133,12 +170,14 @@
 .super-games__date-area {
   display: flex;
   align-items: center;
-  margin-bottom: 12px;
+  margin-bottom: 20px;
+  margin-top: -6px;
   width: max-content;
   position: relative;
 
   @include vp-1199 {
     margin: 0;
+    margin-top: -3px;
   }
 
   &::after {
@@ -148,9 +187,13 @@
     width: 100%;
     background-color: $color-default-white;
     position: absolute;
-    top: 0;
+    top: 7px;
     left: 0;
     z-index: 1;
+
+    @include vp-1199 {
+      top: 3px;
+    }
   }
 }
 
@@ -163,6 +206,7 @@
   @include vp-1199 {
     font-size: 24px;
     line-height: 36px;
+    margin-right: 3px;
   }
 }
 
@@ -181,9 +225,10 @@
 .super-games__button {
   grid-column: 1 / -1;
   width: 100%;
+  padding: 23px 40px;
 
   @include vp-1199 {
-    padding: 14px 30px;
+    padding: 12px 30px;
     border-width: 2px;
     font-size: 10px;
     line-height: 12px;
