--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -3,11 +3,12 @@
 
   &__controls {
     width: max-content;
+    max-width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 46px;
-    margin: 0 auto 39px;
+    margin: 0 auto 36px;
     border-bottom: 2px solid rgba($color-grey, 0.2);
 
     @include vp-1199 {
@@ -72,6 +73,7 @@
     justify-content: center;
     width: 100%;
     gap: 42px;
+    flex-wrap: wrap;
 
     @include vp-1199 {
       flex-direction: column;
@@ -93,5 +95,9 @@
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
+  }
+
+  &__card {
+    flex-grow: 1;
   }
 }
