--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -4,11 +4,12 @@
   position: relative;
 
   @include vp-1199 {
-    padding: 0 95px 105px;
+    padding: 0 101px 100px;
   }
 
   @include vp-767 {
     padding: 0 47px 70px;
+    height: min-content;
   }
 
   h2 {
@@ -27,39 +28,31 @@
       line-height: 50px;
       letter-spacing: 1.26px;
       text-align: center;
-      margin-bottom: 31px;
+      margin-bottom: 32px;
     }
 
     @include vp-767 {
       font-size: 32px;
       line-height: 38px;
       letter-spacing: 0.96px;
-      margin-bottom: 40px;
+      margin-bottom: 42px;
     }
   }
 }
 
 .trainers__slide {
+  background-color: rgba($color-sapphire, 0.89);
   position: relative;
-  width: 260px;
-  height: 294px;
+  width: 100%;
+  height: auto;
   margin: 0 auto;
-
-  @include vp-1199 {
-    width: 268px;
-    height: 294px;
-  }
-
-  @include vp-767 {
-    width: 226px;
-    height: 274px;
-  }
 
   picture {
     display: block;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    background-color: $color-spindle;
 
     @include vp-1199 {
       width: 100%;
@@ -74,8 +67,8 @@
 
   img {
     display: block;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 
     @include vp-1199 {
@@ -87,6 +80,10 @@
       width: 100%;
       height: 100%;
     }
+  }
+
+  &:hover {
+    overflow: auto;
   }
 
   &:hover::before {
