--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -50,6 +50,14 @@
   }
 }
 
+//Добавила эту примесь
+
+@mixin vp-1359 {
+  @media (max-width: ($vp-1360 - 1px)) {
+    @content;
+  }
+}
+
 @mixin vp-1279 {
   @media (max-width: ($vp-1280 - 1px)) {
     @content;
