--- a/source/sass/blocks/subscriptions-сard.scss
+++ b/source/sass/blocks/subscriptions-сard.scss
@@ -78,7 +78,7 @@
       outline-offset: 2px;
 
       @include vp-1199 {
-        padding: 25px 45px;
+        padding: 24px 45px;
         width: 100%;
         align-self: stretch;
       }
@@ -171,6 +171,10 @@
     padding: 22px 43px;
   }
 
+  @include vp-767 {
+    width: 100%;
+  }
+
   &:active {
     background: $torch-red-to-dark-cerulean;
     color: rgba($color-default-white, 0.7);
@@ -179,7 +183,7 @@
     outline-offset: 2px;
 
     @include vp-1199 {
-      padding: 25px 45px;
+      padding: 24px 45px;
       width: 100%;
       align-self: stretch;
     }
