--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -15,12 +15,13 @@
     line-height: 65px;
     letter-spacing: 1.62px;
     margin: 0;
-    margin-bottom: 36px;
+    margin-bottom: 35px;
 
     @include vp-1199 {
       font-size: 42px;
       line-height: 42px;
       letter-spacing: 1.26px;
+      margin-bottom: 35px;
     }
 
     @include vp-767 {
@@ -36,34 +37,35 @@
   width: 100%;
   max-width: 960px;
   margin-right: auto;
-  padding: 58px 103px 42px 122px;
+  padding: 57px 100px 42px 119px;
 
   @include vp-1199 {
     margin: 0 auto;
-    padding: 66px 103px 48px 133px;
+    padding: 66px 103px 43px 133px;
   }
 
   @include vp-767 {
-    padding: 64px 15px 63px;
+    padding: 64px 15px 59px;
   }
 }
 
-.contacts__list {
+.contacts__grid-container {
   list-style-type: none;
   margin: 0 auto;
   padding: 0;
-  column-count: 2;
-  column-gap: 118px;
   position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 120px;
 
   @include vp-1199 {
-    column-gap: 96px;
+    gap: 96px;
   }
 
   @include vp-767 {
     display: flex;
     flex-direction: column;
-    gap: 21px;
+    gap: 20px;
   }
 
   &::after {
@@ -84,9 +86,28 @@
   }
 }
 
+.contacts__grid-fraction {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  padding-left: 2px;
+
+  @include vp-1199 {
+    padding: 0;
+  }
+
+  @include vp-767 {
+    gap: 20px;
+  }
+}
+
 .contacts__item {
   margin: 0;
   margin-bottom: 18px;
+
+  @include vp-1199 {
+    margin-bottom: 20px;
+  }
 
   @include vp-767 {
     margin: 0;
@@ -103,6 +124,7 @@
     @include vp-1199 {
       font-size: 20px;
       line-height: 30px;
+      margin-bottom: 6px;
     }
   }
 
@@ -122,14 +144,44 @@
     color: inherit;
     font: inherit;
     word-break: break-word;
+    padding: 5px 10px;
+    margin: -5px -10px;
 
-    &:hover,
+    @include vp-767 {
+      padding: 5px;
+      margin: -5px;
+    }
+
+    &:hover {
+      opacity: 0.8;
+    }
+
     &:focus {
-      text-decoration: underline;
+      border: 1px solid $color-sapphire;
+      opacity: 1;
+      padding: 4px 9px;
+      outline-offset: 1px;
+
+      @include vp-767 {
+        padding: 5px;
+      }
     }
 
     &:active {
-      color: $color-black-russian;
+      border: none;
+      opacity: 1;
+      text-decoration: underline;
+      padding: 5px 10px;
+      outline-offset: 0;
+
+      @include vp-767 {
+        padding: 5px;
+      }
+    }
+
+    &:disabled,
+    &--disabled {
+      opacity: 0.3;
     }
   }
 }
