--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -112,9 +112,9 @@
     right: 0;
     bottom: 0;
     margin: 0;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -127,8 +127,8 @@
     @include vp-767 {
       width: 100%;
       height: auto;
-      top:0;
-      left:0;
+      top: 0;
+      left: 0;
       transform: none;
       position: relative;
     }
@@ -275,7 +275,7 @@
   @include vp-767 {
     align-self: center;
     padding: 5px 10px;
-    margin-left: 0px;
+    margin-left: 0;
   }
 
   span {
@@ -291,6 +291,10 @@
     }
   }
 
+  &:hover {
+    opacity: 0.8;
+  }
+
   &--blue {
     span {
       font-size: 12px;
@@ -298,6 +302,15 @@
       letter-spacing: 0.6px;
       color: $color-resolution-blue;
       word-break: break-word;
+    }
+
+    &:focus {
+      border: 1px solid $color-sapphire;
+      opacity: 1;
+
+      span {
+        text-decoration: none;
+      }
     }
   }
 
@@ -309,25 +322,10 @@
       color: $color-default-white;
       word-break: break-word;
     }
-  }
 
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &--blue {
-    &:focus {
-      border: 1px solid $color-sapphire;
-
-      span {
-        text-decoration: none;
-      }
-    }
-  }
-
-  &--light {
     &:focus {
       border: 1px solid $color-default-white;
+      opacity: 1;
 
       span {
         text-decoration: none;
@@ -337,6 +335,7 @@
 
   &:active {
     border: none;
+    opacity: 1;
 
     span {
       text-decoration: underline;
