--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -41,16 +41,24 @@
 }
 
 .reviews__wrapper {
-  position: relative;
+  justify-content: center;
+  display: flex;
+  gap: 20px;
+  width: 100%;
+
+  @include vp-767 {
+    gap: 10px;
+    padding: 0 10px;
+  }
 }
 
 .reviews__slider {
-  @include vp-1199 {
-    padding: 0 56px;
-  }
+  width: 560px;
+  margin: 0;
 
-  @include vp-767 {
-    padding: 0 33px;
+  @include vp-1199 {
+    width: 100%;
+    margin: 0 auto;
   }
 }
 
@@ -132,42 +140,23 @@
 
 .reviews__button {
   display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
+  flex: none;
   margin: auto 0;
   z-index: 2;
 }
 
 .reviews__button--prev {
-  left: 224px;
-
-  @include vp-1359 {
-    left: 130px;
-  }
+  order: -1;
 
   @include vp-1199 {
-    left: -20px;
-  }
-
-  @include vp-767 {
-    left: -13px;
+    margin-left: -20px;
   }
 }
 
 .reviews__button--next {
-  right: 224px;
   transform: rotate(180deg);
 
-  @include vp-1359 {
-    right: 130px;
-  }
-
   @include vp-1199 {
-    right: -20px;
-  }
-
-  @include vp-767 {
-    right: -13px;
+    margin-right: -20px;
   }
 }
